// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Panels Table Component render dashboard table container with panels 1`] = `
<div
  style="float: left; width: 100%; max-width: 1130px;"
>
  <div
    class="euiPage euiPage--paddingMedium euiPage--grow"
  >
    <div
      class="euiPageBody euiPageBody--borderRadiusNone"
    >
      <header
        class="euiPageHeader euiPageHeader--responsive euiPageHeader--center"
      >
        <div
          class="euiPageHeaderSection"
        >
          <h1
            class="euiTitle euiTitle--large"
          >
            Observability dashboards
          </h1>
        </div>
      </header>
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPageContent"
        id="customPanelArea"
        role="main"
      >
        <div
          class="euiPageContentHeader euiPageContentHeader--responsive"
        >
          <div
            class="euiPageContentHeaderSection"
          >
            <h3
              class="euiTitle euiTitle--small"
            >
              Dashboard
              <span
                class="panel-header-count"
              >
                 (
                4
                )
              </span>
            </h3>
            <div
              class="euiSpacer euiSpacer--s"
            />
            <div
              class="euiText euiText--small"
            >
              <div
                class="euiTextColor euiTextColor--subdued"
              >
                Use Observability Dashboard to create and view different visualizations on ingested observability data, using PPL (Piped Processing Language) queries.
                 
                <a
                  class="euiLink euiLink--primary"
                  href="https://opensearch.org/docs/latest/observability-plugin/operational-panels/"
                  rel="noreferrer"
                  target="blank"
                >
                  Learn more
                  <svg
                    aria-label="External link"
                    class="euiIcon euiIcon--small euiLink__externalIcon"
                    focusable="false"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M13 8.5a.5.5 0 1 1 1 0V12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h3.5a.5.5 0 0 1 0 1H4a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V8.5Zm-5.12.339a.5.5 0 1 1-.706-.707L13.305 2H10.5a.5.5 0 1 1 0-1H14a1 1 0 0 1 1 1v3.5a.5.5 0 1 1-1 0V2.72L7.88 8.838Z"
                    />
                  </svg>
                </a>
              </div>
            </div>
          </div>
          <div
            class="euiPageContentHeaderSection"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionRow euiFlexGroup--responsive"
            >
              <div
                class="euiFlexItem"
              >
                <div
                  class="euiPopover euiPopover--anchorDownCenter"
                >
                  <div
                    class="euiPopover__anchor"
                  >
                    <button
                      class="euiButton euiButton--primary euiButton--small"
                      data-test-subj="operationalPanelsActionsButton"
                      type="button"
                    >
                      <span
                        class="euiButtonContent euiButtonContent--iconRight euiButton__content"
                      >
                        <svg
                          aria-hidden="true"
                          class="euiIcon euiIcon--medium euiIcon--inherit euiButtonContent__icon"
                          focusable="false"
                          height="16"
                          role="img"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                            fill-rule="non-zero"
                          />
                        </svg>
                        <span
                          class="euiButton__text"
                        >
                          Actions
                        </span>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="euiFlexItem"
              >
                <a
                  class="euiButton euiButton--primary euiButton--small euiButton--fill"
                  data-test-subj="customPanels__createNewPanels"
                  href="#/create"
                  rel="noreferrer"
                >
                  <span
                    class="euiButtonContent euiButton__content"
                  >
                    <span
                      class="euiButton__text"
                    >
                      Create Dashboard
                    </span>
                  </span>
                </a>
              </div>
            </div>
          </div>
        </div>
        <hr
          class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginMedium"
        />
        <div
          class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--compressed"
        >
          <div
            class="euiFormControlLayout__childrenWrapper"
          >
            <input
              class="euiFieldSearch euiFieldSearch--fullWidth euiFieldSearch--compressed"
              data-test-subj="operationalPanelSearchBar"
              placeholder="Search Observability Dashboard name"
              type="search"
              value=""
            />
            <div
              class="euiFormControlLayoutIcons"
            >
              <span
                class="euiFormControlLayoutCustomIcon"
              >
                <svg
                  aria-hidden="true"
                  class="euiIcon euiIcon--small euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                  focusable="false"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <hr
          class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginMedium"
        />
        <div
          class="euiBasicTable"
        >
          <div>
            <div
              class="euiTableHeaderMobile"
            >
              <div
                class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsBaseline euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
              >
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <div
                    class="euiCheckbox"
                  >
                    <input
                      aria-label="Select all rows"
                      class="euiCheckbox__input"
                      id="_selection_column-checkbox_random_html_id"
                      type="checkbox"
                    />
                    <div
                      class="euiCheckbox__square"
                    />
                    <label
                      class="euiCheckbox__label"
                      for="_selection_column-checkbox_random_html_id"
                    >
                      Select all rows
                    </label>
                  </div>
                </div>
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <div
                    class="euiTableSortMobile"
                  >
                    <div
                      class="euiPopover euiPopover--anchorDownRight"
                    >
                      <div
                        class="euiPopover__anchor"
                      >
                        <button
                          class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiButtonEmpty--flushRight"
                          type="button"
                        >
                          <span
                            class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                          >
                            <svg
                              aria-hidden="true"
                              class="euiIcon euiIcon--small euiIcon--inherit euiButtonContent__icon"
                              focusable="false"
                              height="16"
                              role="img"
                              viewBox="0 0 16 16"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                                fill-rule="non-zero"
                              />
                            </svg>
                            <span
                              class="euiButtonEmpty__text"
                            >
                              Sorting
                            </span>
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <table
              class="euiTable euiTable--responsive euiTable--auto"
              id="random_html_id"
              tabindex="-1"
            >
              <caption
                class="euiScreenReaderOnly euiTableCaption"
              />
              <thead>
                <tr>
                  <th
                    class="euiTableHeaderCellCheckbox"
                    scope="col"
                  >
                    <div
                      class="euiTableCellContent"
                    >
                      <div
                        class="euiCheckbox euiCheckbox--inList euiCheckbox--noLabel"
                      >
                        <input
                          aria-label="Select all rows"
                          class="euiCheckbox__input"
                          data-test-subj="checkboxSelectAll"
                          id="_selection_column-checkbox_random_html_id"
                          type="checkbox"
                        />
                        <div
                          class="euiCheckbox__square"
                        />
                      </div>
                    </div>
                  </th>
                  <th
                    aria-live="polite"
                    aria-sort="none"
                    class="euiTableHeaderCell"
                    data-test-subj="tableHeaderCell_title_0"
                    role="columnheader"
                    scope="col"
                  >
                    <button
                      class="euiTableHeaderButton"
                      data-test-subj="tableHeaderSortButton"
                      type="button"
                    >
                      <span
                        class="euiTableCellContent"
                      >
                        <span
                          class="euiTableCellContent__text"
                          title="Name"
                        >
                          Name
                        </span>
                      </span>
                    </button>
                  </th>
                  <th
                    aria-live="polite"
                    aria-sort="descending"
                    class="euiTableHeaderCell"
                    data-test-subj="tableHeaderCell_dateModified_1"
                    role="columnheader"
                    scope="col"
                  >
                    <button
                      class="euiTableHeaderButton euiTableHeaderButton-isSorted"
                      data-test-subj="tableHeaderSortButton"
                      type="button"
                    >
                      <span
                        class="euiTableCellContent"
                      >
                        <span
                          class="euiTableCellContent__text"
                          title="Last updated"
                        >
                          Last updated
                        </span>
                        <svg
                          aria-hidden="true"
                          class="euiIcon euiIcon--medium euiIcon-isLoading euiTableSortIcon"
                          focusable="false"
                          height="16"
                          role="img"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                          />
                        </svg>
                      </span>
                    </button>
                  </th>
                  <th
                    aria-live="polite"
                    aria-sort="none"
                    class="euiTableHeaderCell"
                    data-test-subj="tableHeaderCell_dateCreated_2"
                    role="columnheader"
                    scope="col"
                  >
                    <button
                      class="euiTableHeaderButton"
                      data-test-subj="tableHeaderSortButton"
                      type="button"
                    >
                      <span
                        class="euiTableCellContent"
                      >
                        <span
                          class="euiTableCellContent__text"
                          title="Created"
                        >
                          Created
                        </span>
                      </span>
                    </button>
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr
                  class="euiTableRow euiTableRow-isSelectable"
                >
                  <td
                    class="euiTableRowCellCheckbox"
                  >
                    <div
                      class="euiTableCellContent"
                    >
                      <div
                        class="euiCheckbox euiCheckbox--inList euiCheckbox--noLabel"
                      >
                        <input
                          aria-label="Select this row"
                          class="euiCheckbox__input"
                          data-test-subj="checkboxSelectRow-P8Qd4nwBDp0rvEg39HG_"
                          id="_selection_column_P8Qd4nwBDp0rvEg39HG_-checkbox"
                          title="Select this row"
                          type="checkbox"
                        />
                        <div
                          class="euiCheckbox__square"
                        />
                      </div>
                    </div>
                  </td>
                  <td
                    class="euiTableRowCell"
                  >
                    <div
                      class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                    >
                      Name
                    </div>
                    <div
                      class="euiTableCellContent euiTableCellContent--truncateText euiTableCellContent--overflowingContent"
                    >
                      <a
                        class="euiLink euiLink--primary"
                        href="observability#/P8Qd4nwBDp0rvEg39HG_"
                        rel="noreferrer"
                      >
                        Test Panel 1 Title
                      </a>
                    </div>
                  </td>
                  <td
                    class="euiTableRowCell"
                  >
                    <div
                      class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                    >
                      Last updated
                    </div>
                    <div
                      class="euiTableCellContent euiTableCellContent--overflowingContent"
                    >
                      11/04/2021 06:10 PM
                    </div>
                  </td>
                  <td
                    class="euiTableRowCell"
                  >
                    <div
                      class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                    >
                      Created
                    </div>
                    <div
                      class="euiTableCellContent euiTableCellContent--overflowingContent"
                    >
                      11/02/2021 07:26 PM
                    </div>
                  </td>
                </tr>
                <tr
                  class="euiTableRow euiTableRow-isSelectable"
                >
                  <td
                    class="euiTableRowCellCheckbox"
                  >
                    <div
                      class="euiTableCellContent"
                    >
                      <div
                        class="euiCheckbox euiCheckbox--inList euiCheckbox--noLabel"
                      >
                        <input
                          aria-label="Select this row"
                          class="euiCheckbox__input"
                          data-test-subj="checkboxSelectRow-b8Sc4nwBDp0rvEg3F3Fk"
                          id="_selection_column_b8Sc4nwBDp0rvEg3F3Fk-checkbox"
                          title="Select this row"
                          type="checkbox"
                        />
                        <div
                          class="euiCheckbox__square"
                        />
                      </div>
                    </div>
                  </td>
                  <td
                    class="euiTableRowCell"
                  >
                    <div
                      class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                    >
                      Name
                    </div>
                    <div
                      class="euiTableCellContent euiTableCellContent--truncateText euiTableCellContent--overflowingContent"
                    >
                      <a
                        class="euiLink euiLink--primary"
                        href="observability#/b8Sc4nwBDp0rvEg3F3Fk"
                        rel="noreferrer"
                      >
                        Test Panel 1 Title
                      </a>
                    </div>
                  </td>
                  <td
                    class="euiTableRowCell"
                  >
                    <div
                      class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                    >
                      Last updated
                    </div>
                    <div
                      class="euiTableCellContent euiTableCellContent--overflowingContent"
                    >
                      11/03/2021 10:51 PM
                    </div>
                  </td>
                  <td
                    class="euiTableRowCell"
                  >
                    <div
                      class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                    >
                      Created
                    </div>
                    <div
                      class="euiTableCellContent euiTableCellContent--overflowingContent"
                    >
                      11/02/2021 09:44 PM
                    </div>
                  </td>
                </tr>
                <tr
                  class="euiTableRow euiTableRow-isSelectable"
                >
                  <td
                    class="euiTableRowCellCheckbox"
                  >
                    <div
                      class="euiTableCellContent"
                    >
                      <div
                        class="euiCheckbox euiCheckbox--inList euiCheckbox--noLabel"
                      >
                        <input
                          aria-label="Select this row"
                          class="euiCheckbox__input"
                          data-test-subj="checkboxSelectRow-lsQfznwBDp0rvEg3W2wH"
                          id="_selection_column_lsQfznwBDp0rvEg3W2wH-checkbox"
                          title="Select this row"
                          type="checkbox"
                        />
                        <div
                          class="euiCheckbox__square"
                        />
                      </div>
                    </div>
                  </td>
                  <td
                    class="euiTableRowCell"
                  >
                    <div
                      class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                    >
                      Name
                    </div>
                    <div
                      class="euiTableCellContent euiTableCellContent--truncateText euiTableCellContent--overflowingContent"
                    >
                      <a
                        class="euiLink euiLink--primary"
                        href="observability#/lsQfznwBDp0rvEg3W2wH"
                        rel="noreferrer"
                      >
                        Test Panel 1 Title
                      </a>
                    </div>
                  </td>
                  <td
                    class="euiTableRowCell"
                  >
                    <div
                      class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                    >
                      Last updated
                    </div>
                    <div
                      class="euiTableCellContent euiTableCellContent--overflowingContent"
                    >
                      11/03/2021 10:37 PM
                    </div>
                  </td>
                  <td
                    class="euiTableRowCell"
                  >
                    <div
                      class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                    >
                      Created
                    </div>
                    <div
                      class="euiTableCellContent euiTableCellContent--overflowingContent"
                    >
                      10/29/2021 10:15 PM
                    </div>
                  </td>
                </tr>
                <tr
                  class="euiTableRow euiTableRow-isSelectable"
                >
                  <td
                    class="euiTableRowCellCheckbox"
                  >
                    <div
                      class="euiTableCellContent"
                    >
                      <div
                        class="euiCheckbox euiCheckbox--inList euiCheckbox--noLabel"
                      >
                        <input
                          aria-label="Select this row"
                          class="euiCheckbox__input"
                          data-test-subj="checkboxSelectRow-L8Sx53wBDp0rvEg3yoLb"
                          id="_selection_column_L8Sx53wBDp0rvEg3yoLb-checkbox"
                          title="Select this row"
                          type="checkbox"
                        />
                        <div
                          class="euiCheckbox__square"
                        />
                      </div>
                    </div>
                  </td>
                  <td
                    class="euiTableRowCell"
                  >
                    <div
                      class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                    >
                      Name
                    </div>
                    <div
                      class="euiTableCellContent euiTableCellContent--truncateText euiTableCellContent--overflowingContent"
                    >
                      <a
                        class="euiLink euiLink--primary"
                        href="observability#/L8Sx53wBDp0rvEg3yoLb"
                        rel="noreferrer"
                      >
                        Test Panel 1 Title
                      </a>
                    </div>
                  </td>
                  <td
                    class="euiTableRowCell"
                  >
                    <div
                      class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                    >
                      Last updated
                    </div>
                    <div
                      class="euiTableCellContent euiTableCellContent--overflowingContent"
                    >
                      11/03/2021 09:26 PM
                    </div>
                  </td>
                  <td
                    class="euiTableRowCell"
                  >
                    <div
                      class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                    >
                      Created
                    </div>
                    <div
                      class="euiTableCellContent euiTableCellContent--overflowingContent"
                    >
                      11/03/2021 09:26 PM
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
          <div>
            <div
              class="euiSpacer euiSpacer--m"
            />
            <div
              class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <div
                  class="euiPopover euiPopover--anchorUpRight"
                >
                  <div
                    class="euiPopover__anchor"
                  >
                    <button
                      class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall"
                      data-test-subj="tablePaginationPopoverButton"
                      type="button"
                    >
                      <span
                        class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                      >
                        <svg
                          aria-hidden="true"
                          class="euiIcon euiIcon--small euiIcon--inherit euiButtonContent__icon"
                          focusable="false"
                          height="16"
                          role="img"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                            fill-rule="non-zero"
                          />
                        </svg>
                        <span
                          class="euiButtonEmpty__text"
                        >
                          Rows per page
                          : 
                          10
                        </span>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <nav
                  class="euiPagination"
                >
                  <button
                    aria-label="Previous page"
                    class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall"
                    data-test-subj="pagination-button-previous"
                    disabled=""
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonIcon__icon"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                      />
                    </svg>
                  </button>
                  <ul
                    class="euiPagination__list"
                  >
                    <li
                      class="euiPagination__item"
                    >
                      <button
                        aria-controls="random_html_id"
                        aria-current="true"
                        aria-label="Page 1 of 1"
                        class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--small euiButtonEmpty-isDisabled euiPaginationButton euiPaginationButton-isActive euiPaginationButton--hideOnMobile"
                        data-test-subj="pagination-button-0"
                        disabled=""
                        type="button"
                      >
                        <span
                          class="euiButtonContent euiButtonEmpty__content"
                        >
                          <span
                            class="euiButtonEmpty__text"
                          >
                            1
                          </span>
                        </span>
                      </button>
                    </li>
                  </ul>
                  <button
                    aria-label="Next page"
                    class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall"
                    data-test-subj="pagination-button-next"
                    disabled=""
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonIcon__icon"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                      />
                    </svg>
                  </button>
                </nav>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Panels Table Component renders empty dashboard table container 1`] = `
<div
  style="float: left; width: 100%; max-width: 1130px;"
>
  <div
    class="euiPage euiPage--paddingMedium euiPage--grow"
  >
    <div
      class="euiPageBody euiPageBody--borderRadiusNone"
    >
      <header
        class="euiPageHeader euiPageHeader--responsive euiPageHeader--center"
      >
        <div
          class="euiPageHeaderSection"
        >
          <h1
            class="euiTitle euiTitle--large"
          >
            Observability dashboards
          </h1>
        </div>
      </header>
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPageContent"
        id="customPanelArea"
        role="main"
      >
        <div
          class="euiPageContentHeader euiPageContentHeader--responsive"
        >
          <div
            class="euiPageContentHeaderSection"
          >
            <h3
              class="euiTitle euiTitle--small"
            >
              Dashboard
              <span
                class="panel-header-count"
              >
                 (
                0
                )
              </span>
            </h3>
            <div
              class="euiSpacer euiSpacer--s"
            />
            <div
              class="euiText euiText--small"
            >
              <div
                class="euiTextColor euiTextColor--subdued"
              >
                Use Observability Dashboard to create and view different visualizations on ingested observability data, using PPL (Piped Processing Language) queries.
                 
                <a
                  class="euiLink euiLink--primary"
                  href="https://opensearch.org/docs/latest/observability-plugin/operational-panels/"
                  rel="noreferrer"
                  target="blank"
                >
                  Learn more
                  <svg
                    aria-hidden="true"
                    aria-label="External link"
                    class="euiIcon euiIcon--small euiIcon-isLoading euiLink__externalIcon"
                    focusable="false"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                    />
                  </svg>
                </a>
              </div>
            </div>
          </div>
          <div
            class="euiPageContentHeaderSection"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionRow euiFlexGroup--responsive"
            >
              <div
                class="euiFlexItem"
              >
                <div
                  class="euiPopover euiPopover--anchorDownCenter"
                >
                  <div
                    class="euiPopover__anchor"
                  >
                    <button
                      class="euiButton euiButton--primary euiButton--small"
                      data-test-subj="operationalPanelsActionsButton"
                      type="button"
                    >
                      <span
                        class="euiButtonContent euiButtonContent--iconRight euiButton__content"
                      >
                        <svg
                          aria-hidden="true"
                          class="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonContent__icon"
                          focusable="false"
                          height="16"
                          role="img"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                          />
                        </svg>
                        <span
                          class="euiButton__text"
                        >
                          Actions
                        </span>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="euiFlexItem"
              >
                <a
                  class="euiButton euiButton--primary euiButton--small euiButton--fill"
                  data-test-subj="customPanels__createNewPanels"
                  href="#/create"
                  rel="noreferrer"
                >
                  <span
                    class="euiButtonContent euiButton__content"
                  >
                    <span
                      class="euiButton__text"
                    >
                      Create Dashboard
                    </span>
                  </span>
                </a>
              </div>
            </div>
          </div>
        </div>
        <hr
          class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginMedium"
        />
        <div
          class="euiSpacer euiSpacer--xxl"
        />
        <div
          class="euiText euiText--medium"
        >
          <div
            class="euiTextAlign euiTextAlign--center"
          >
            <h2
              data-test-subj="customPanels__noPanelsHome"
            >
              No Observability Dashboards
            </h2>
            <div
              class="euiSpacer euiSpacer--m"
            />
            <div
              class="euiText euiText--medium"
            >
              <div
                class="euiTextColor euiTextColor--subdued"
              >
                Use Observability Dashboards to dive deeper into observability
                <br />
                using PPL queries and insightful visualizations
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiSpacer euiSpacer--m"
        />
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
        >
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <a
              class="euiButton euiButton--primary euiButton--small"
              data-test-subj="customPanels__emptyCreateNewPanels"
              href="#/create"
              rel="noreferrer"
            >
              <span
                class="euiButtonContent euiButton__content"
              >
                <span
                  class="euiButton__text"
                >
                  Create Dashboard
                </span>
              </span>
            </a>
          </div>
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <button
              class="euiButton euiButton--primary euiButton--small"
              type="button"
            >
              <span
                class="euiButtonContent euiButton__content"
              >
                <span
                  class="euiButton__text"
                >
                  Add samples
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          class="euiSpacer euiSpacer--xxl"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Panels Table Component renders empty panel table container2 1`] = `
<div
  style="float: left; width: 100%; max-width: 1130px;"
>
  <div
    class="euiPage euiPage--paddingMedium euiPage--grow"
  >
    <div
      class="euiPageBody euiPageBody--borderRadiusNone"
    >
      <header
        class="euiPageHeader euiPageHeader--responsive euiPageHeader--center"
      >
        <div
          class="euiPageHeaderSection"
        >
          <h1
            class="euiTitle euiTitle--large"
          >
            Observability dashboards
          </h1>
        </div>
      </header>
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPageContent"
        id="customPanelArea"
        role="main"
      >
        <div
          class="euiPageContentHeader euiPageContentHeader--responsive"
        >
          <div
            class="euiPageContentHeaderSection"
          >
            <h3
              class="euiTitle euiTitle--small"
            >
              Dashboard
              <span
                class="panel-header-count"
              >
                 (
                4
                )
              </span>
            </h3>
            <div
              class="euiSpacer euiSpacer--s"
            />
            <div
              class="euiText euiText--small"
            >
              <div
                class="euiTextColor euiTextColor--subdued"
              >
                Use Observability Dashboard to create and view different visualizations on ingested observability data, using PPL (Piped Processing Language) queries.
                 
                <a
                  class="euiLink euiLink--primary"
                  href="https://opensearch.org/docs/latest/observability-plugin/operational-panels/"
                  rel="noreferrer"
                  target="blank"
                >
                  Learn more
                  <svg
                    aria-label="External link"
                    class="euiIcon euiIcon--small euiLink__externalIcon"
                    focusable="false"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M13 8.5a.5.5 0 1 1 1 0V12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h3.5a.5.5 0 0 1 0 1H4a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V8.5Zm-5.12.339a.5.5 0 1 1-.706-.707L13.305 2H10.5a.5.5 0 1 1 0-1H14a1 1 0 0 1 1 1v3.5a.5.5 0 1 1-1 0V2.72L7.88 8.838Z"
                    />
                  </svg>
                </a>
              </div>
            </div>
          </div>
          <div
            class="euiPageContentHeaderSection"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionRow euiFlexGroup--responsive"
            >
              <div
                class="euiFlexItem"
              >
                <div
                  class="euiPopover euiPopover--anchorDownCenter"
                >
                  <div
                    class="euiPopover__anchor"
                  >
                    <button
                      class="euiButton euiButton--primary euiButton--small"
                      data-test-subj="operationalPanelsActionsButton"
                      type="button"
                    >
                      <span
                        class="euiButtonContent euiButtonContent--iconRight euiButton__content"
                      >
                        <svg
                          aria-hidden="true"
                          class="euiIcon euiIcon--medium euiIcon--inherit euiButtonContent__icon"
                          focusable="false"
                          height="16"
                          role="img"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                            fill-rule="non-zero"
                          />
                        </svg>
                        <span
                          class="euiButton__text"
                        >
                          Actions
                        </span>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="euiFlexItem"
              >
                <a
                  class="euiButton euiButton--primary euiButton--small euiButton--fill"
                  data-test-subj="customPanels__createNewPanels"
                  href="#/create"
                  rel="noreferrer"
                >
                  <span
                    class="euiButtonContent euiButton__content"
                  >
                    <span
                      class="euiButton__text"
                    >
                      Create Dashboard
                    </span>
                  </span>
                </a>
              </div>
            </div>
          </div>
        </div>
        <hr
          class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginMedium"
        />
        <div
          class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--compressed"
        >
          <div
            class="euiFormControlLayout__childrenWrapper"
          >
            <input
              class="euiFieldSearch euiFieldSearch--fullWidth euiFieldSearch--compressed"
              data-test-subj="operationalPanelSearchBar"
              placeholder="Search Observability Dashboard name"
              type="search"
              value=""
            />
            <div
              class="euiFormControlLayoutIcons"
            >
              <span
                class="euiFormControlLayoutCustomIcon"
              >
                <svg
                  aria-hidden="true"
                  class="euiIcon euiIcon--small euiFormControlLayoutCustomIcon__icon"
                  focusable="false"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m11.271 11.978 3.872 3.873a.502.502 0 0 0 .708 0 .502.502 0 0 0 0-.708l-3.565-3.564c2.38-2.747 2.267-6.923-.342-9.532-2.73-2.73-7.17-2.73-9.898 0-2.728 2.729-2.728 7.17 0 9.9a6.955 6.955 0 0 0 4.949 2.05.5.5 0 0 0 0-1 5.96 5.96 0 0 1-4.242-1.757 6.01 6.01 0 0 1 0-8.486c2.337-2.34 6.143-2.34 8.484 0a6.01 6.01 0 0 1 0 8.486.5.5 0 0 0 .034.738Z"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <hr
          class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginMedium"
        />
        <div
          class="euiBasicTable"
        >
          <div>
            <div
              class="euiTableHeaderMobile"
            >
              <div
                class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsBaseline euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
              >
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <div
                    class="euiCheckbox"
                  >
                    <input
                      aria-label="Select all rows"
                      class="euiCheckbox__input"
                      id="_selection_column-checkbox_random_html_id"
                      type="checkbox"
                    />
                    <div
                      class="euiCheckbox__square"
                    />
                    <label
                      class="euiCheckbox__label"
                      for="_selection_column-checkbox_random_html_id"
                    >
                      Select all rows
                    </label>
                  </div>
                </div>
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <div
                    class="euiTableSortMobile"
                  >
                    <div
                      class="euiPopover euiPopover--anchorDownRight"
                    >
                      <div
                        class="euiPopover__anchor"
                      >
                        <button
                          class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiButtonEmpty--flushRight"
                          type="button"
                        >
                          <span
                            class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                          >
                            <svg
                              aria-hidden="true"
                              class="euiIcon euiIcon--small euiIcon--inherit euiButtonContent__icon"
                              focusable="false"
                              height="16"
                              role="img"
                              viewBox="0 0 16 16"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                                fill-rule="non-zero"
                              />
                            </svg>
                            <span
                              class="euiButtonEmpty__text"
                            >
                              Sorting
                            </span>
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <table
              class="euiTable euiTable--responsive euiTable--auto"
              id="random_html_id"
              tabindex="-1"
            >
              <caption
                class="euiScreenReaderOnly euiTableCaption"
              />
              <thead>
                <tr>
                  <th
                    class="euiTableHeaderCellCheckbox"
                    scope="col"
                  >
                    <div
                      class="euiTableCellContent"
                    >
                      <div
                        class="euiCheckbox euiCheckbox--inList euiCheckbox--noLabel"
                      >
                        <input
                          aria-label="Select all rows"
                          class="euiCheckbox__input"
                          data-test-subj="checkboxSelectAll"
                          id="_selection_column-checkbox_random_html_id"
                          type="checkbox"
                        />
                        <div
                          class="euiCheckbox__square"
                        />
                      </div>
                    </div>
                  </th>
                  <th
                    aria-live="polite"
                    aria-sort="none"
                    class="euiTableHeaderCell"
                    data-test-subj="tableHeaderCell_title_0"
                    role="columnheader"
                    scope="col"
                  >
                    <button
                      class="euiTableHeaderButton"
                      data-test-subj="tableHeaderSortButton"
                      type="button"
                    >
                      <span
                        class="euiTableCellContent"
                      >
                        <span
                          class="euiTableCellContent__text"
                          title="Name"
                        >
                          Name
                        </span>
                      </span>
                    </button>
                  </th>
                  <th
                    aria-live="polite"
                    aria-sort="descending"
                    class="euiTableHeaderCell"
                    data-test-subj="tableHeaderCell_dateModified_1"
                    role="columnheader"
                    scope="col"
                  >
                    <button
                      class="euiTableHeaderButton euiTableHeaderButton-isSorted"
                      data-test-subj="tableHeaderSortButton"
                      type="button"
                    >
                      <span
                        class="euiTableCellContent"
                      >
                        <span
                          class="euiTableCellContent__text"
                          title="Last updated"
                        >
                          Last updated
                        </span>
                        <svg
                          aria-hidden="true"
                          class="euiIcon euiIcon--medium euiTableSortIcon"
                          focusable="false"
                          height="16"
                          role="img"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M7 11.692V3.556C7 3.249 7.224 3 7.5 3s.5.249.5.556v8.136l4.096-4.096a.5.5 0 0 1 .707.707l-4.242 4.243a1.494 1.494 0 0 1-.925.433.454.454 0 0 1-.272 0 1.494 1.494 0 0 1-.925-.433L2.197 8.303a.5.5 0 1 1 .707-.707L7 11.692Z"
                          />
                        </svg>
                      </span>
                    </button>
                  </th>
                  <th
                    aria-live="polite"
                    aria-sort="none"
                    class="euiTableHeaderCell"
                    data-test-subj="tableHeaderCell_dateCreated_2"
                    role="columnheader"
                    scope="col"
                  >
                    <button
                      class="euiTableHeaderButton"
                      data-test-subj="tableHeaderSortButton"
                      type="button"
                    >
                      <span
                        class="euiTableCellContent"
                      >
                        <span
                          class="euiTableCellContent__text"
                          title="Created"
                        >
                          Created
                        </span>
                      </span>
                    </button>
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr
                  class="euiTableRow euiTableRow-isSelectable"
                >
                  <td
                    class="euiTableRowCellCheckbox"
                  >
                    <div
                      class="euiTableCellContent"
                    >
                      <div
                        class="euiCheckbox euiCheckbox--inList euiCheckbox--noLabel"
                      >
                        <input
                          aria-label="Select this row"
                          class="euiCheckbox__input"
                          data-test-subj="checkboxSelectRow-P8Qd4nwBDp0rvEg39HG_"
                          id="_selection_column_P8Qd4nwBDp0rvEg39HG_-checkbox"
                          title="Select this row"
                          type="checkbox"
                        />
                        <div
                          class="euiCheckbox__square"
                        />
                      </div>
                    </div>
                  </td>
                  <td
                    class="euiTableRowCell"
                  >
                    <div
                      class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                    >
                      Name
                    </div>
                    <div
                      class="euiTableCellContent euiTableCellContent--truncateText euiTableCellContent--overflowingContent"
                    >
                      <a
                        class="euiLink euiLink--primary"
                        href="observability#/P8Qd4nwBDp0rvEg39HG_"
                        rel="noreferrer"
                      >
                        Test Panel 1 Title
                      </a>
                    </div>
                  </td>
                  <td
                    class="euiTableRowCell"
                  >
                    <div
                      class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                    >
                      Last updated
                    </div>
                    <div
                      class="euiTableCellContent euiTableCellContent--overflowingContent"
                    >
                      11/04/2021 06:10 PM
                    </div>
                  </td>
                  <td
                    class="euiTableRowCell"
                  >
                    <div
                      class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                    >
                      Created
                    </div>
                    <div
                      class="euiTableCellContent euiTableCellContent--overflowingContent"
                    >
                      11/02/2021 07:26 PM
                    </div>
                  </td>
                </tr>
                <tr
                  class="euiTableRow euiTableRow-isSelectable"
                >
                  <td
                    class="euiTableRowCellCheckbox"
                  >
                    <div
                      class="euiTableCellContent"
                    >
                      <div
                        class="euiCheckbox euiCheckbox--inList euiCheckbox--noLabel"
                      >
                        <input
                          aria-label="Select this row"
                          class="euiCheckbox__input"
                          data-test-subj="checkboxSelectRow-b8Sc4nwBDp0rvEg3F3Fk"
                          id="_selection_column_b8Sc4nwBDp0rvEg3F3Fk-checkbox"
                          title="Select this row"
                          type="checkbox"
                        />
                        <div
                          class="euiCheckbox__square"
                        />
                      </div>
                    </div>
                  </td>
                  <td
                    class="euiTableRowCell"
                  >
                    <div
                      class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                    >
                      Name
                    </div>
                    <div
                      class="euiTableCellContent euiTableCellContent--truncateText euiTableCellContent--overflowingContent"
                    >
                      <a
                        class="euiLink euiLink--primary"
                        href="observability#/b8Sc4nwBDp0rvEg3F3Fk"
                        rel="noreferrer"
                      >
                        Test Panel 1 Title
                      </a>
                    </div>
                  </td>
                  <td
                    class="euiTableRowCell"
                  >
                    <div
                      class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                    >
                      Last updated
                    </div>
                    <div
                      class="euiTableCellContent euiTableCellContent--overflowingContent"
                    >
                      11/03/2021 10:51 PM
                    </div>
                  </td>
                  <td
                    class="euiTableRowCell"
                  >
                    <div
                      class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                    >
                      Created
                    </div>
                    <div
                      class="euiTableCellContent euiTableCellContent--overflowingContent"
                    >
                      11/02/2021 09:44 PM
                    </div>
                  </td>
                </tr>
                <tr
                  class="euiTableRow euiTableRow-isSelectable"
                >
                  <td
                    class="euiTableRowCellCheckbox"
                  >
                    <div
                      class="euiTableCellContent"
                    >
                      <div
                        class="euiCheckbox euiCheckbox--inList euiCheckbox--noLabel"
                      >
                        <input
                          aria-label="Select this row"
                          class="euiCheckbox__input"
                          data-test-subj="checkboxSelectRow-lsQfznwBDp0rvEg3W2wH"
                          id="_selection_column_lsQfznwBDp0rvEg3W2wH-checkbox"
                          title="Select this row"
                          type="checkbox"
                        />
                        <div
                          class="euiCheckbox__square"
                        />
                      </div>
                    </div>
                  </td>
                  <td
                    class="euiTableRowCell"
                  >
                    <div
                      class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                    >
                      Name
                    </div>
                    <div
                      class="euiTableCellContent euiTableCellContent--truncateText euiTableCellContent--overflowingContent"
                    >
                      <a
                        class="euiLink euiLink--primary"
                        href="observability#/lsQfznwBDp0rvEg3W2wH"
                        rel="noreferrer"
                      >
                        Test Panel 1 Title
                      </a>
                    </div>
                  </td>
                  <td
                    class="euiTableRowCell"
                  >
                    <div
                      class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                    >
                      Last updated
                    </div>
                    <div
                      class="euiTableCellContent euiTableCellContent--overflowingContent"
                    >
                      11/03/2021 10:37 PM
                    </div>
                  </td>
                  <td
                    class="euiTableRowCell"
                  >
                    <div
                      class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                    >
                      Created
                    </div>
                    <div
                      class="euiTableCellContent euiTableCellContent--overflowingContent"
                    >
                      10/29/2021 10:15 PM
                    </div>
                  </td>
                </tr>
                <tr
                  class="euiTableRow euiTableRow-isSelectable"
                >
                  <td
                    class="euiTableRowCellCheckbox"
                  >
                    <div
                      class="euiTableCellContent"
                    >
                      <div
                        class="euiCheckbox euiCheckbox--inList euiCheckbox--noLabel"
                      >
                        <input
                          aria-label="Select this row"
                          class="euiCheckbox__input"
                          data-test-subj="checkboxSelectRow-L8Sx53wBDp0rvEg3yoLb"
                          id="_selection_column_L8Sx53wBDp0rvEg3yoLb-checkbox"
                          title="Select this row"
                          type="checkbox"
                        />
                        <div
                          class="euiCheckbox__square"
                        />
                      </div>
                    </div>
                  </td>
                  <td
                    class="euiTableRowCell"
                  >
                    <div
                      class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                    >
                      Name
                    </div>
                    <div
                      class="euiTableCellContent euiTableCellContent--truncateText euiTableCellContent--overflowingContent"
                    >
                      <a
                        class="euiLink euiLink--primary"
                        href="observability#/L8Sx53wBDp0rvEg3yoLb"
                        rel="noreferrer"
                      >
                        Test Panel 1 Title
                      </a>
                    </div>
                  </td>
                  <td
                    class="euiTableRowCell"
                  >
                    <div
                      class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                    >
                      Last updated
                    </div>
                    <div
                      class="euiTableCellContent euiTableCellContent--overflowingContent"
                    >
                      11/03/2021 09:26 PM
                    </div>
                  </td>
                  <td
                    class="euiTableRowCell"
                  >
                    <div
                      class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                    >
                      Created
                    </div>
                    <div
                      class="euiTableCellContent euiTableCellContent--overflowingContent"
                    >
                      11/03/2021 09:26 PM
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
          <div>
            <div
              class="euiSpacer euiSpacer--m"
            />
            <div
              class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <div
                  class="euiPopover euiPopover--anchorUpRight"
                >
                  <div
                    class="euiPopover__anchor"
                  >
                    <button
                      class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall"
                      data-test-subj="tablePaginationPopoverButton"
                      type="button"
                    >
                      <span
                        class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                      >
                        <svg
                          aria-hidden="true"
                          class="euiIcon euiIcon--small euiIcon--inherit euiButtonContent__icon"
                          focusable="false"
                          height="16"
                          role="img"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                            fill-rule="non-zero"
                          />
                        </svg>
                        <span
                          class="euiButtonEmpty__text"
                        >
                          Rows per page
                          : 
                          10
                        </span>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <nav
                  class="euiPagination"
                >
                  <button
                    aria-label="Previous page"
                    class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall"
                    data-test-subj="pagination-button-previous"
                    disabled=""
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="euiIcon euiIcon--medium euiIcon--inherit euiButtonIcon__icon"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M10.843 13.069 6.232 8.384a.546.546 0 0 1 0-.768l4.61-4.685a.552.552 0 0 0 0-.771.53.53 0 0 0-.759 0l-4.61 4.684a1.65 1.65 0 0 0 0 2.312l4.61 4.684a.53.53 0 0 0 .76 0 .552.552 0 0 0 0-.771Z"
                        fill-rule="nonzero"
                      />
                    </svg>
                  </button>
                  <ul
                    class="euiPagination__list"
                  >
                    <li
                      class="euiPagination__item"
                    >
                      <button
                        aria-controls="random_html_id"
                        aria-current="true"
                        aria-label="Page 1 of 1"
                        class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--small euiButtonEmpty-isDisabled euiPaginationButton euiPaginationButton-isActive euiPaginationButton--hideOnMobile"
                        data-test-subj="pagination-button-0"
                        disabled=""
                        type="button"
                      >
                        <span
                          class="euiButtonContent euiButtonEmpty__content"
                        >
                          <span
                            class="euiButtonEmpty__text"
                          >
                            1
                          </span>
                        </span>
                      </button>
                    </li>
                  </ul>
                  <button
                    aria-label="Next page"
                    class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall"
                    data-test-subj="pagination-button-next"
                    disabled=""
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="euiIcon euiIcon--medium euiIcon--inherit euiButtonIcon__icon"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m5.157 13.069 4.611-4.685a.546.546 0 0 0 0-.768L5.158 2.93a.552.552 0 0 1 0-.771.53.53 0 0 1 .759 0l4.61 4.684c.631.641.63 1.672 0 2.312l-4.61 4.684a.53.53 0 0 1-.76 0 .552.552 0 0 1 0-.771Z"
                        fill-rule="nonzero"
                      />
                    </svg>
                  </button>
                </nav>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
